--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ authors = [
 ]
 license = {text = "Propietary"}
 readme = "README.md"
-requires-python = ">=3.10"
+requires-python =  ">=3.10.0,<3.13.0"
 dependencies = [
     "zope (>=5.12,<6.0)"
 ]
@@ -16,3 +16,19 @@ dependencies = [
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.poetry]
+packages = [
+{ from = ".", include = "src" },
+]
+[tool.poetry.group.dev.dependencies]
+pytest = "^8.3.4"
+pytest-cov = "^6.0.0"
+pre-commit = "^4.1.0"
+flake8 = "^7.1.2"
+black = "^25.1.0"
+isort = "^6.0.0"
+mypy = "^1.15.0"
+jupyterlab = "^4.3.5"
+ipykernel = "^6.29.5"
+
